--- a/userapp/Makefile
+++ b/userapp/Makefile
@@ -7,9 +7,10 @@ all: make.dep run
 
 CPPFLAGS=-nostdinc -I../include -Iinclude
 ASFLAGS=-m32 -Wall -D__ASSEMBLY__
-CFLAGS=	-m32 -Wall -DSNPRINTF_FLOATPOINT \
-	-ffreestanding -fleading-underscore \
-	-mno-ms-bitfields -fno-stack-check -fno-pie #-mno-stack-arg-probe
+CFLAGS=	-m32 -Wall \
+	-DSNPRINTF_FLOATPOINT \
+	-ffreestanding -fleading-underscore -mno-ms-bitfields \
+	-fno-pie #-fno-stack-check -mno-stack-arg-probe -fno-stack-protector
 LDFLAGS=-m32 -nostdlib -nostartfiles -nodefaultlibs \
 		-Wl,-Map,$(PROG).map -static
 
