MSYS2中的gcc真的define了unix！而没有define了__WIN32__？！

--- a/kernel/kernel.ld.in
+++ b/kernel/kernel.ld.in
@@ -20,7 +20,7 @@
 #define LOADADDR 0x100000
 #define KERNBASE 0xC0000000
 
-#if defined __WIN32__
+#if defined(__WIN32__) || defined(__CYGWIN__)
 OUTPUT_FORMAT("pei-i386")
 #elif defined __ELF__
 OUTPUT_FORMAT("elf32-i386")
