可以在QEMU(v4.1.0)上运行！
1、在RPI 1 B上测试也通过。

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -3,42 +3,65 @@ include ../Makefile.inc
 PROG=		kernel
 
 .PHONY: all
-all: make.dep $(PROG).img
+all: release
 
-CPPFLAGS=-DVERBOSE=1 -nostdinc -I../include
-ASFLAGS=-Wall -O2 -D__ASSEMBLY__
-CFLAGS=	-Wall -O2  \
+CPPFLAGS=-DVERBOSE=0 -nostdinc -I../include
+ASFLAGS=-Wall -D__ASSEMBLY__
+CFLAGS=	-Wall -pipe \
 	-fomit-frame-pointer \
-	-ffreestanding -fno-stack-check -fleading-underscore
-LDFLAGS+=-Tldscript -nostdlib -nostartfiles -nodefaultlibs \
-		-Wl,-Map,$(PROG).map
+	-ffreestanding -fleading-underscore \
+	-fno-pie #-fno-stack-check -mno-stack-arg-probe -fno-stack-protector
+LDFLAGS+=-Tkernel.ld -nostdlib -nostartfiles -nodefaultlibs \
+		-Wl,-Map,$(PROG).map -static
 
 COBJS=timer.o machdep.o task.o \
 	startup.o kmalloc.o page.o frame.o bitmap.o \
-	printk.o 
+	printk.o
 COBJS+= ../lib/string.o ../lib/memcpy.o \
 		../lib/memset.o  ../lib/tlsf/tlsf.o ../lib/snprintf.o ../lib/softfloat.o
 OBJS=entry.o $(COBJS)
 
-../lib/snprintf.o:   .FORCE
 .PHONY: .FORCE
 .FORCE:
+
+../lib/tlsf/tlsf.o: .FORCE
+../lib/memcpy.o: .FORCE
+../lib/memset.o: .FORCE
+../lib/snprintf.o: .FORCE
+../lib/softfloat.o: .FORCE
+../lib/string.o: .FORCE
 
 .DELETE_ON_ERROR: make.dep
 make.dep: $(COBJS:.o=.c)
 	$(CC) $(CPPFLAGS) -M $^ >make.dep
-	
+
 $(PROG).img: $(PROG).elf
 	$(OBJCOPY) $^ -O binary $@
 
-$(PROG).elf: ldscript $(OBJS)
+$(PROG).elf: kernel.ld $(OBJS)
 	$(CC) $(LDFLAGS) $(OBJS) -o $@
 
-ldscript: ldscript.in
-	$(CC) -E -P -x c-header -o $@ $^
-	
+kernel.ld: kernel.ld.in
+	$(CC) $(CPPFLAGS) -E -P -x c-header -o $@ $^
+
+.PHONY: release
+release: CFLAGS+=-O2 -ggdb
+release: make.dep $(PROG).img
+
+.PHONY: debug
+debug: CFLAGS+=-O0 -ggdb
+debug: make.dep $(PROG).img
+
+.PHONY: qemu
+qemu: CPPFLAGS+=-DRPI_QEMU
+qemu: release
+
+.PHONY: qemudbg
+qemudbg: CPPFLAGS+=-DRPI_QEMU
+qemudbg: debug
+
 .PHONY: clean
 clean:
-	-$(RM) ldscript $(OBJS) $(PROG).img $(PROG).elf $(PROG).map make.dep *.*~
+	-$(RM) kernel.ld $(OBJS) $(PROG).img $(PROG).elf $(PROG).map make.dep *.*~
 
 -include make.dep
