--- a/userapp/Makefile
+++ b/userapp/Makefile
@@ -8,16 +8,27 @@ all: make.dep $(PROG).out
 CPPFLAGS=-nostdinc -I../include -Iinclude
 ASFLAGS=-Wall -O2 -D__ASSEMBLY__
 CFLAGS=	-Wall -O2 \
-	-fno-builtin -ffreestanding -fno-stack-check -fleading-underscore
-LDFLAGS= -nostdlib -nostartfiles -nodefaultlibs \
+	-ffreestanding -fleading-underscore
+LDFLAGS= -nostdlib \
 		-Wl,-Map,$(PROG).map -Wl,-e,_start,-Ttext,0x08048000
 
+COBJS=	main.o lib/stdio.o ../lib/snprintf.o ../lib/softfloat.o ../lib/string.o
+
 COBJS=	main.o
+COBJS+=	lib/stdio.o
+COBJS+=	../lib/softfloat.o ../lib/string.o ../lib/memcpy.o \
+		../lib/memset.o ../lib/snprintf.o
+
 OBJS=	lib/crt0.o lib/syscall-wrapper.o $(COBJS)
 
-../lib/snprintf.o:   .FORCE
 .PHONY: .FORCE
 .FORCE:
+
+../lib/softfloat.o: .FORCE
+../lib/string.o: .FORCE
+../lib/memcpy.o: .FORCE
+../lib/memset.o: .FORCE
+../lib/snprintf.o: .FORCE
 
 $(PROG).out: $(OBJS)
 	$(CC) $(LDFLAGS) -o $@ $^ $(LIBS)
