基本与PC版本差不多了
1、增加了mmap和munmap系统调用（不完整）；
2、增加了malloc、stdlib库函数，数学库还没有计划；

--- a/userapp/Makefile
+++ b/userapp/Makefile
@@ -15,9 +15,10 @@ LDFLAGS= -nostdlib \
 COBJS=	main.o lib/stdio.o ../lib/snprintf.o ../lib/softfloat.o ../lib/string.o
 
 COBJS=	main.o
-COBJS+=	lib/stdio.o
+COBJS+=	lib/stdio.o lib/qsort.o
 COBJS+=	../lib/softfloat.o ../lib/string.o ../lib/memcpy.o \
 		../lib/memset.o ../lib/snprintf.o
+COBJS+=	lib/malloc.o ../lib/tlsf/tlsf.o
 
 OBJS=	lib/crt0.o lib/syscall-wrapper.o $(COBJS)
 
