加上文件系统
1、定义了设备和文件系统的接口；
2、文件系统采用Windows盘符的形式，A:是第一个盘，B:是第二个等。
      但是，我用/作为分隔符，而不是Windows中的\。所以，用A:/a.out表示文件。
      盘符$表示设备文件系统，例如$:/null0等价于Unix中的/dev/null。
      除了$:/null0，目前支持的设备还有有$:/sd0表示默认的sd卡，$:/zero0相当于/dev/zero。

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -14,7 +14,7 @@ LDFLAGS+=-Tkernel.ld -nostdlib \
 
 COBJS=timer.o machdep.o task.o \
 	startup.o kmalloc.o page.o frame.o bitmap.o \
-	printk.o sdcard.o dosfs.o elf.o
+	printk.o sdcard.o dosfs.o elf.o devfs.o file.o virtdev.o
 COBJS+= ../lib/string.o ../lib/memcpy.o \
 		../lib/memset.o  ../lib/tlsf/tlsf.o ../lib/snprintf.o ../lib/softfloat.o
 OBJS=entry.o $(COBJS)
