--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -7,7 +7,7 @@ all: release
 
 RPI_QEMU=0
 
-CPPFLAGS=-nostdinc -I../include -DRPI_QEMU=$(RPI_QEMU)
+CPPFLAGS=-nostdinc -Iinclude -I../include -DRPI_QEMU=$(RPI_QEMU)
 ASFLAGS=-Wall -D__ASSEMBLY__
 CFLAGS=	-Wall -pipe \
 	-ffreestanding -fleading-underscore
