这个版本，在1B, 1B+(V1.2), 2B(V1.1) and 3B+全部测试通过。

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -9,7 +9,7 @@ RPI_QEMU=0
 
 CPPFLAGS=-nostdinc -Iinclude -I../include -DRPI_QEMU=$(RPI_QEMU)
 ASFLAGS=-Wall -mcpu=arm1176jzf-s -D__ASSEMBLY__
-CFLAGS=	-Wall -mcpu=arm1176jzf-s -pipe \
+CFLAGS= -Wall -pipe \
 	-ffreestanding -fleading-underscore
 LDFLAGS+=-Tkernel.ld -nostdlib -Wl,-Map,$(PROG).map
 
