几个重要修改
1、.text和.rodata之后，加一个页面对齐。
2、把_edata改为_bss_start，加了一个_rodata_end

--- a/kernel/kernel.ld.in
+++ b/kernel/kernel.ld.in
@@ -33,20 +33,19 @@ SECTIONS {
   .rodata : {
     *(.rodata)
   }
-  .rdata : {
-    *(.rdata)
-  }
+  . = ALIGN(PAGE_SIZE);
+  _rodata_end = .;
+
   .data : {
     *(.data)
   }
   . = ALIGN(4);
-  _edata = .;
+  _bss_start = .;
 
   .bss : {
     *(.bss)
     *(COMMON)
   }
-
   . = ALIGN(4);
   _end = .;
 }
